<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:id="@+id/mainview"
    android:background="@drawable/fondo"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#567bc4"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">
        <TextView
            android:id="@+id/tvEjeX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/elementosX"
            android:textColor="#000000"
            android:textSize="16dp"
            android:drawableLeft="@drawable/ic_grid"
            android:drawablePadding="10dp"/>

        <SeekBar
            android:id="@+id/seekbarX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="3"
            android:progressTint="#ff3414"
            android:thumb="@drawable/ic_seek"
            style="@style/Widget.AppCompat.SeekBar.Discrete"/>

        <TextView
            android:id="@+id/tvEjeY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/elementosY"
            android:textColor="#000000"
            android:textSize="16dp"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/ic_grid"
            android:drawablePadding="10dp" />
        <SeekBar
            android:id="@+id/seekbarY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="3"
            android:progressTint="#ff3414"
            android:thumb="@drawable/ic_seek"
            android:layout_marginTop="10dp"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            />
        <TextView
            android:id="@+id/tvColores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/elementosTrama"
            android:textColor="#000000"
            android:textSize="16dp"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/ic_trama"
            android:drawablePadding="10dp"/>
        <SeekBar
            android:id="@+id/seekbarColores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="3"
            android:progressTint="#ff3414"
            android:thumb="@drawable/ic_seek"
            android:layout_marginTop="10dp"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/baldosas"
            android:textColor="#000000"
            android:textSize="16dp"
            android:layout_marginTop="30dp"

           />
        <RadioGroup
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/rgModelo">
            <RadioButton
                android:id="@+id/rbColores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colores"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbNumeros"
                android:layout_marginLeft="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeros" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcionesAdicionales"
            android:textColor="#000000"
            android:textSize="16dp"
            android:layout_marginTop="30dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sonidos"
                android:id="@+id/cbSonido"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibracion"
                android:layout_marginLeft="40dp"
                android:id="@+id/cbVibracion"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciarJuego"
            android:drawableLeft="@drawable/ic_game"
            android:id="@+id/botonInicio"
            android:onClick="startPLay"
           />
    </LinearLayout>
</LinearLayout>