<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GameField"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    android:id="@+id/mainLayout">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#567bc4"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:drawableLeft="@drawable/ic_clock"
                android:drawablePadding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="fill_vertical"
                android:text="@string/tiempo"
                android:textSize="20dp"
                android:textColor="#000"
                android:layout_marginRight="10dp"
                />
            <Chronometer
                android:id="@+id/cronometro"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:textColor="#000000"
                android:format="%s" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movimientos"
            android:textSize="20dp"
            android:textColor="#000"
            android:id="@+id/tvContador"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:id="@+id/mainGame">
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volver"
            android:drawableLeft="@drawable/ic_back"
            android:onClick="volver"
            />
    </LinearLayout>

</LinearLayout>